--- a/src/components/pricing/Pricing.css
+++ b/src/components/pricing/Pricing.css
@@ -14,17 +14,7 @@
     text-align: center;
     margin-bottom: 20px;
 }
-@media (max-width:576px){
-    .pricing__top{
-        padding: 0 60px;
-    }
-    .pricing__title {
-        text-align: start;
-    }
-    .pricing__subtitile{
-        text-align: start;
-    }
-}
+
 .pricing__title {
     font-weight: 900;
     font-size: 4rem;
@@ -51,6 +41,18 @@
     bottom: 0;
     left: 0;
     border-radius: 7px;
+}
+@media (max-width:767px){
+    .pricing__top{
+        padding: 0 60px;
+    }
+    .pricing__title {
+        text-align: start;
+        font-size: 3rem;
+    }
+    .pricing__subtitile{
+        text-align: start;
+    }
 }
 .pricing__bottom {
     display: flex;
